Assignment2/Services/camera-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: camera
spec:
  containers:
  - name: camera
    image: ccuni/camera-service-2021w
    ports:
    - containerPort: 31100
