Assignment2/Services/collector-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: collector
spec:
  containers:
  - name: collector
    image: europe-central2-docker.pkg.dev/microservicescloudcomputing/assignment2-repo/collector-microservice@sha256:6c61ced5e03f4d34f3e8b350cba17a956e7f4671b007968f44a44e17c6c0040b
    ports:
    - containerPort: 31700
