Assignment2/Services/cpanel-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cpanel
spec:
  containers:
  - name: cpanel
    image: europe-central2-docker.pkg.dev/microservicescloudcomputing/assignment2-repo/cpanel-service@sha256:c15f2e2c5bd5082e0669e4e172c8682b8ffda7a3a937a8260b0bd5377abc987d
    ports:
    - containerPort: 3800
