Assignment2/Services/face-recognition-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: face-recognition
spec:
  containers:
  - name: face-recognition
    image: ccuni/face-recognition-service-2021w
    ports:
    - containerPort: 31300
