Assignment2/Services/human-detection-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: human-detection
spec:
  containers:
  - name: human-detection
    image: europe-central2-docker.pkg.dev/microservicescloudcomputing/assignment2-repo/human-detection@sha256:82e6d58c785ce676a75059bf8a439ec5e4bf70f615873005dfe6d18c968cb08d
    ports:
    - containerPort: 31600
