Assignment2/Services/section-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: section
spec:
  containers:
  - name: section
    image: ccuni/section-service-2021w
    ports:
    - containerPort: 31400
