Assignment2/Services/alert-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: alert
  labels:
    app: alert
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: alert
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert
  labels:
    app: alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert
  template:
    metadata:
      labels:
        app: alert
    spec:
      containers:
      - name: alert
        image: ccuni/alert-service-2021w
        ports:
        - containerPort: 31500
