Assignment2/Services/camera-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: camera
  labels:
    app: camera
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: camera
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camera
  labels:
    app: camera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camera
  template:
    metadata:
      labels:
        app: camera
    spec:
      containers:
      - name: camera
        image: ccuni/camera-service-2021w
        ports:
        - containerPort: 31100
