Assignment2/Services/face-recognition-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: face-recognition
  labels:
    app: face-recognition
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: face-recognition
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-recognition
  labels:
    app: face-recognition
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-recognition
  template:
    metadata:
      labels:
        app: face-recognition
    spec:
      containers:
      - name: face-recognition
        image: ccuni/face-recognition-service-2021w
        ports:
        - containerPort: 31300
