Assignment2/Services/image-analysis-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: image-analysis
  labels:
    app: image-analysis
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: image-analysis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-analysis
  labels:
    app: image-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-analysis
  template:
    metadata:
      labels:
        app: image-analysis
    spec:
      containers:
      - name: image-analysis
        image: ccuni/image-analysis-service-2021w
        ports:
        - containerPort: 31200
